<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="?android:attr/listPreferredItemHeight"
              android:orientation="horizontal">

    <TextView
            android:id="@+id/photoStatus"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="10dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="•"
            android:textSize="22dp"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/templateName"
                style="@style/StandardFont"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="Unknown template"/>

        <TextView
                android:id="@+id/createdTime"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="time"/>
    </LinearLayout>

</LinearLayout>