<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">ODK Scan</string>

<string name="app_description">Scan and process bubble forms</string>
<string name="bubble_process_activity">Processing Scanned Form</string>
<string name="view_bubble_forms_activity">View Forms</string>
<string name="bubble_instructions_activity">Instructions</string>
<string name="display_processed_form_activity">Display Processed Form</string>
<string name="display_processed_data_activity">Display Processed Data</string>
<string name="after_photo_taken_activity">Captured Image</string>

<!-- For Preferences -->
<string name="calibrate">Calibrate</string>
<string name="doFormDetection">Do Form Detection</string>
    
<!-- For Main Screen -->
<string name="Health_Center">Health Center</string>
<string name="the_current_health_center_is">The current health center is:</string>
<string name="scan_new_form">Scan New Form</string>
<string name="ViewFormsButton">View Scanned Forms</string>
<string name="InstructionsButton">Instructions</string>
<string name="SettingsButton">Settings</string>

<!-- AfterPhotoTaken -->
<string name="process_form">Process Form</string>
<string name="retake_photo">Retake Photo</string>
<string name="aligning_form">Aligning form &#8230;</string>
<string name="processing_form">Processing form &#8230;</string>
<string name="could_not_register">Sorry, the form could not be registered.</string>

<!-- DisplayProcessedForm -->
<string name="next_page">Scan Next Page</string>
<string name="save">Save</string>
<string name="transcribe">Transcribe</string>
<string name="collect_save">Collect Save</string>
<string name="collect_transcribe">Collect Transcribe</string>

<!-- Popup menu -->
<string name="save_data">Save Data</string>
<string name="display_data">Display Data</string>
<string name="main_menu">Main Menu</string>
    
<!-- Instructions -->
<string name="Instructions1">The BubbleBot appplication is designed to convert paper bubble forms into a digital format using computer vision.  </string>
<string name="Instructions2">To scan a form, click the "Scan New Form" button on the main page.  This will open up a camera.  A rectangle will
							be overlaid on top of the viewfinder.  In order to capture your paper form correctly, orient the phone so that your
							paper form fits inside the rectangle.  When the phone is oriented correctly, the rectangle will turn green.  To take
							a picture, click on the camera button.</string>
<string name="Instructions3">After taking a picture, the image will be processed.  This process may take a few minutes.  Once processing is 
							complete, you will be able to view a copy of the image indicating which bubbles were identified by the computer
							vision algorithm.  Recognized bubbles will be circled in red.  If the processing is not acceptable, click on the
							"Take New Picture" button to retake.  If the processing is acceptable, press "Accept".  The data will be stored
							in digital format.</string>
<string name="Instructions4">To view forms that have already been scanned, click the "View Scanned Forms" page on the main screen.  You will
							be able to view both the textual data collected and the image displaying which bubbles were recognized by the
							computer vision algorithm.  You may retake the picture from here as well.</string>
</resources>
